# frameflow

./: .dockerignore  .env.example  .gitattributes  .gitignore  Caddyfile  Dockerfile  LICENSE  Makefile  PROJECT_SPEC.md  README.md  docker-compose.yml  start-frameflow.cmd
.playwright-cli/: page-2026-07-13T12-54-27-154Z.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements-asr-local.txt  requirements-dev.txt  requirements-embeddings-local.txt  requirements.txt
backend/app/: __init__.py  asr.py  auth.py  config.py  db.py  embeddings.py  errors.py  image_generation.py  image_worker.py  llm.py  main.py  middleware.py  models.py  nlp.py  preview.py  schemas.py  seed.py  serializers.py  serve.py  services.py  thumbnails.py  vision.py  worker.py
backend/app/routers/: __init__.py  _deps.py  asr.py  assets.py  audit.py  auth.py  demo.py  health.py  image_generations.py  jobs.py  previews.py  projects.py  runs.py  segments.py
backend/app/services/: __init__.py  asset_tagging.py  assets.py  audit.py  common.py  image_generations.py  jobs.py  previews.py  projects.py  runs.py  segments.py  selections.py
backend/tests/: conftest.py  test_api_flow.py  test_asset_deletion.py  test_asset_tagging.py  test_auth.py  test_backend_invariants.py  test_config.py  test_dashboard_metrics.py  test_dashscope_asr.py  test_embeddings.py  test_health_pool.py  test_image_generation_flow.py  test_image_generation_project_delete.py  test_image_generation_provider.py  test_llm.py  test_llm_live.py  test_nlp.py  test_preview.py  test_rate_limit.py  test_serializers.py  test_serve.py  test_spa.py  test_timeline_timing.py  test_video_thumbnails.py  test_vision.py  test_worker_concurrency_safety.py  test_worker_lifecycle.py
demo/: sample-transcript.txt  (+1 more)
(+98 files in other folders)
