[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frameflow-backend"
version = "1.0.0"
description = "FrameFlow AI persistent API and durable worker"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic>=2.7,<3",
  "python-multipart>=0.0.9,<1",
  "httpx>=0.27,<1",
  "jieba>=0.42.1,<1",
  "Pillow>=10,<12",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
]
local-asr = [
  "faster-whisper>=1.1,<2",
  "opencc-python-reimplemented>=0.1.7,<1",
]
local-embeddings = [
  "sentence-transformers>=3,<5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: tests that hit real external providers (LLM/ASR/embedding). Skipped unless FRAMEFLOW_RUN_LIVE=1.",
]
addopts = "-q -m 'not live'"
